# liblightnvm-test

./: CMakeLists.txt  MakeFIle  MakeFile  Makefile  README.md  addr_test.c  block_erase_unit.c  erase_rw_crash.c  get_bbt  get_bbt.c  parallel_nvm_write.c  parallel_plane.c  read_hw  read_hw.c  rw_unit_test.c  scan_erase_badblock.c  sec_unit_writ.c  set_badblk.c  showinfo  showinfo.c  write_hw  write_hw.c  wrong_addr_test  wrong_addr_test.c
